--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,27 @@
     --primary-color:#E55049;
     font-weight: 900;
     padding: 0;
+}
 
+a:link{
+    color:black;
+    text-decoration: none;
+
+}
+
+button{
+    outline: none;
 }
 
 @media screen and (min-width: 0px) {
     ion-row {
+
       font-size: 0.4rem;
       height: 47vh;
     }
 
     .playerone{
         background-color: #F7F7F7;
- 
-
     }
     
     .playertwo{
@@ -58,6 +66,7 @@
     ion-row {
       font-size: 0.6rem;
     }
+ 
     h1{
         font-size: 3rem;
     }
@@ -71,12 +80,12 @@
     }        
     .dice{
         position: relative;
-        height: 100px;
-        width: 100px;
+        height: 75px;
+        width: 75px;
     }
         .dot{
-            height: 15px;
-            width: 15px;
+            height: 10px;
+            width: 10px;
         }
   }
 
@@ -85,10 +94,11 @@
       font-size: 0.8em;
      
     }
-    h1{
-        font-size: 3rem;
-    }
 
+    h1{
+        font-size: 2.5rem;
+    }
+ 
     .score-wrapper{
         margin: auto;
         width: 150px;
@@ -111,7 +121,7 @@
 
     }
     ion-grid{
-        background: linear-gradient(to left, #FFFFFF 50%, #F7F7F7 50%);
+        background: linear-gradient(to left, #FFFFFF 50%, #f7f7f7d3 50%);
         height: 100vh;
     }
 
@@ -130,8 +140,7 @@
 
 
     .playerone{
-        
-        background-color: #F7F7F7;
+        background-color: #f7f7f7d3;
         height: 80vh;
     }
 
@@ -155,9 +164,6 @@
            right: 0;
         }
   }
-
-
-
 .dice{
 position: relative;
 background: #FFFFFF;
@@ -171,6 +177,13 @@ margin-right: auto;
 .dot{
     border-radius: 20px;
     background:var(--primary-color); 
+}
+
+.dot-player{
+   margin-left: 10px;
+   position: absolute;
+   top: 50%;
+   transform: translateX(-50%);
 }
 
 .one{
@@ -246,11 +259,16 @@ margin-right: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: 500;
+    background-color: inherit;
 }
 ion-icon{
     color: var(--primary-color);
     font-size: 1.8em; 
     margin: 10px;
+}
+
+.btn-new {
+    cursor: pointer;
 }
